# gcatlib

./: .gitignore  README.md  configure.ac
doc/: mkdocs.yml
doc/content/: index.md
src/: FastxEntry.cpp  FastxEntry.hpp  FastxReader.cpp  FastxReader.hpp  FastxWriter.cpp  FastxWriter.hpp  Makefile.am  Metagene.cpp  Metagene.hpp
