lib_LIBRARIES = libgcat.a

libgcat_a_SOURCES = AlignedGenomicFeature.cpp \
                    AlignedOverlapGenomicFeature.cpp \
                    AlignmentMismatches.cpp \
                    BedReader.cpp \
                    FastqReader.cpp \
                    GeneCount.cpp \
                    GenomeReader.cpp \
                    GenomicRegion.cpp \
                    GtfReader.cpp \
                    PreprocessGff.cpp \
                    SamEntry.cpp \
                    SamReader.cpp


pkginclude_HEADERS = AlignedGenomicFeature.hpp \
                     AlignedOverlapGenomicFeature.hpp \
                     AlignmentMismatches.hpp \
                     BedReader.hpp \
                     FastqReader.hpp \
                     GeneCount.hpp \
                     GenomeReader.hpp \
                     GenomicRegion.hpp \
                     GtfReader.hpp \
                     PreprocessGff.hpp \
                     SamEntry.hpp \
                     SamReader.hpp
