lib_LIBRARIES = libgcat.a

AM_CXXFLAGS = -O2 -Wall -std=c++11

libgcat_a_SOURCES = AlignedGenomicFeature.cpp \
                    AlignedOverlapGenomicFeature.cpp \
                    AlignmentMismatches.cpp \
                    BedReader.cpp \
                    FastqReader.cpp \
                    GeneCount.cpp \
                    GenomeReader.cpp \
                    GenomicRegion.cpp \
                    GtfReader.cpp \
                    PreprocessGff.cpp \
                    SamEntry.cpp \
                    SamReader.cpp \
                    Metagene.cpp \
                    FastxReader.cpp \
                    FastxEntry.cpp


pkginclude_HEADERS = AlignedGenomicFeature.hpp \
                     AlignedOverlapGenomicFeature.hpp \
                     AlignmentMismatches.hpp \
                     BedReader.hpp \
                     FastqReader.hpp \
                     GeneCount.hpp \
                     GenomeReader.hpp \
                     GenomicRegion.hpp \
                     GtfReader.hpp \
                     PreprocessGff.hpp \
                     SamEntry.hpp \
                     SamReader.hpp \
                     FeatureVector.hpp \
                     GenomicStepVector.hpp \
                     StepVector.hpp \
                     Metagene.hpp \
                     FastxReader.hpp \
                     FastxEntry.cpp
